Fixes all applications background color for dark mode (#1977)

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -605,6 +605,10 @@ button {
 .page-body,
 .homepage-body {
   height: 100vh;
+
+  .list-group.list-group-transparent.dark .all-apps-link {
+    background-color: $dark-background !important;
+  }
 }
 .homepage-dropdown-style {
   min-width: 11rem;
